syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ot2";
option java_outer_classname = "ShippingCostsOuterClass";
option objc_class_prefix = "HLW";

package br.com.zup.ot2;

service ShippingCostsService{
  rpc send (ShippingRequest) returns (ShippingResponse){}

  rpc calculateShippingCosts(CalculateShippingCostsRequest) returns (CalculateShippingCostsResponse){}
}

message ShippingRequest{
  string name = 1;
}

message ShippingResponse{
  string message = 1;
}

message CalculateShippingCostsRequest{
  string zipcode = 1;
}

message CalculateShippingCostsResponse{
  string zipcode = 1;
  double price = 2;
}